--- a/Problemes/3.7.ipynb
+++ b/Problemes/3.7.ipynb
@@ -39,13 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "Jex4NhPuUhzz"
    },
    "outputs": [],
    "source": [
     "def calculadora():\n",
+    "    resultat = 0\n",
+    "    nombre1 = eval(input(\"Escriu el primer nombre: \"))\n",
+    "    print(nombre1)\n",
+    "    operacio = input(\"Escriu la operació, + suma, - resta, * multiplicació.\")\n",
+    "    print(f\"\",nombre1,\" \",operacio)\n",
+    "    nombre2 = eval(input(\"Escriu el segon nombre: \"))\n",
+    "    print(f\"\",nombre1,\" \",operacio,\" \",nombre2)\n",
+    "    match operacio:\n",
+    "        case \"+\":\n",
+    "            resultat = nombre2 + nombre1\n",
+    "            print(f\"\",nombre1,\" \",operacio,\" \",nombre2,\" = \", resultat)\n",
+    "        case \"-\":\n",
+    "            resultat = nombre1 - nombre2\n",
+    "            print(f\"\",nombre1,\" \",operacio,\" \",nombre2,\" = \", resultat)\n",
+    "        case \"*\":\n",
+    "            resultat = nombre2*nombre1\n",
+    "            print(f\"\",nombre1,\" \",operacio,\" \",nombre2,\" = \", resultat)\n",
     "    \"\"\"\n",
     "    Aquesta funció representa una calculadora.\n",
     "    Llegueix l'entrada per linia de comandes.\n",
@@ -62,13 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "MJFRLSZcUhzz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      " 4   +\n",
+      " 4   +   5\n",
+      " 4   +   5  =  9\n"
+     ]
+    }
+   ],
    "source": [
-    "#calculadora()"
+    "calculadora()"
    ]
   },
   {
@@ -145,7 +173,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
