--- a/Pràctiques/3.3.ipynb
+++ b/Pràctiques/3.3.ipynb
@@ -1,1 +1,388 @@
-{"cells":[{"cell_type":"markdown","metadata":{"id":"KB3KAlcFUTai"},"source":["# Capítol 3 - Algorismes i Nombres"]},{"cell_type":"markdown","metadata":{"id":"0aRrKS3NUTao"},"source":["### 3.3 Numeració en diferents bases"]},{"cell_type":"markdown","metadata":{},"source":["Escriu una funció que, donat un nombre hexadecimal, el converteixi a decimal. L'entrada serà tipus string i la sortida tipus int."]},{"cell_type":"code","execution_count":7,"metadata":{"id":"CJBWffIJUTao"},"outputs":[],"source":["def convert_hex(xifra):\n","    \"\"\"\n","    Aquesta funció transforma un nombre hexadecimal a nombre binari?\n","    \n","    Parameters\n","    ----------\n","    xifra: string\n","    \n","    Returns\n","    -------\n","    decimal: int      \n","    \"\"\"\n","    decimal = 0\n","    num = 0\n","    for a in range(len(xifra)):\n","        match xifra[a]:\n","            case '0'|'1'|'2'|'3'|'4'|'5'|'6'|'7'|'8'|'9':\n","                num = int(xifra[a])\n","            case 'A':\n","                num = 10\n","            case 'B':\n","                num = 11\n","            case 'C':\n","                num = 12\n","            case 'D':\n","                num = 13\n","            case 'E':\n","                num = 14\n","            case 'F':\n","                num = 15\n","        decimal += num*(16**(len(xifra)-a-1))\n","            \n","    return decimal"]},{"cell_type":"code","execution_count":8,"metadata":{"id":"ThQHSyk9UTap"},"outputs":[],"source":["assert convert_hex('3A') == 58\n","assert convert_hex('B6') == 182\n","assert convert_hex('123') == 291"]},{"cell_type":"code","execution_count":9,"metadata":{"id":"iGbTDcZGUTap"},"outputs":[{"data":{"text/plain":["58"]},"execution_count":9,"metadata":{},"output_type":"execute_result"}],"source":[]},{"cell_type":"markdown","metadata":{},"source":["Escriu una funció que compti quants dígits té un nombre natural escrit en base 10 i representat per una variable int."]},{"cell_type":"code","execution_count":1,"metadata":{"id":"29NzoKVdUTap"},"outputs":[],"source":["def digits(xifra):\n","    \"\"\"\n","    Aquesta funció retorna el nombre de digits d'un natural.\n","    \n","    Parameters\n","    ----------\n","    xifra: int\n","        Un nombre natural.\n","        \n","    Returns\n","    -------\n","    numDigits: int\n","        Quanitat de digits que té xifra\n","    \"\"\"\n","    num = xifra\n","    numDigits = 0\n","    while xifra > 1:\n","        xifra = xifra/10\n","        numDigits += 1\n","    return numDigits"]},{"cell_type":"code","execution_count":2,"metadata":{"id":"kLbB2F4DUTaq"},"outputs":[],"source":["assert digits(123456)== 6"]},{"cell_type":"markdown","metadata":{},"source":["Escriu una funció que donat un número N retorni tots els nombres binaris entre 1 i N dins d'una llista, ambdós inclosos."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"6HyrADxIUTaq"},"outputs":[],"source":["def binari(N):\n","    \"\"\"\n","    Aquesta funció crea tot els nombres binaris entre 1 i N donat N.\n","    Podeu utilitzar funcions específiques de Python. \n","    \n","    Parameters\n","    ----------\n","    N: int\n","    \n","    Returns\n","    -------\n","    llista: list\n","    \"\"\"\n","    return llista"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"movLNS0HUTaq"},"outputs":[],"source":["assert binari(10) == ['0b1', '0b10', '0b11', '0b100', '0b101', '0b110', '0b111', '0b1000', '0b1001', '0b1010']"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"5DBX0gWiUTar"},"outputs":[],"source":["def binari_elegant(N):\n","    \"\"\"\n","    Aquesta funció crea tot els nombres binaris entre 1 i N donat N.\n","    Podeu utilitzar funcions específiques de Python. \n","    \n","    Parameters\n","    ----------\n","    N: int\n","    \n","    Returns\n","    -------\n","    llista: list\n","    \"\"\"\n","    \n","    return llista"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"DbXbV10bUTar"},"outputs":[],"source":["assert binari_elegant(10) == ['0001', '0010', '0011', '0100', '0101', '0110', '0111', '1000', '1001', '1010']"]},{"cell_type":"markdown","metadata":{},"source":["Escriu una funció que compti la suma dels dígits d'un nombre elevat a una potència."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"AaNK-BSWUTar"},"outputs":[],"source":["def suma_digits(num, potencia):\n","    \"\"\"\n","    Aquesta funció calcula la suma dels digits d'un número elevat a una potència.\n","    \n","    Parameters\n","    ----------\n","    num: int\n","        Base\n","    potencia: int\n","        Exponent\n","        \n","    Returns\n","    -------\n","    suma: int\n","        Suma dels digits\n","    \"\"\"\n","    \n","    return suma"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"jpUckxZvUTas"},"outputs":[],"source":["def suma_digits(num, potencia):\n","    \"\"\"\n","    Aquesta funció calcula la suma dels digits d'un número elevat a una potència.\n","    \n","    Parameters\n","    ----------\n","    num: int\n","        Base\n","    potencia: int\n","        Exponent\n","        \n","    Returns\n","    -------\n","    suma: int\n","        Suma dels digits\n","    \"\"\"\n","     return suma"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"7kw13I7DUTas"},"outputs":[],"source":["assert suma_digits(2,100) == 115"]},{"cell_type":"code","execution_count":7,"metadata":{},"outputs":[{"data":{"text/plain":["3"]},"execution_count":7,"metadata":{},"output_type":"execute_result"}],"source":["pedro = '1A'\n","a = int(pedro[0])+2\n","\n","a"]},{"cell_type":"code","execution_count":null,"metadata":{},"outputs":[],"source":[]}],"metadata":{"colab":{"collapsed_sections":[],"name":"3.3.ipynb","provenance":[]},"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.12.6"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "KB3KAlcFUTai"
+   },
+   "source": [
+    "# Capítol 3 - Algorismes i Nombres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "0aRrKS3NUTao"
+   },
+   "source": [
+    "### 3.3 Numeració en diferents bases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escriu una funció que, donat un nombre hexadecimal, el converteixi a decimal. L'entrada serà tipus string i la sortida tipus int."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "CJBWffIJUTao"
+   },
+   "outputs": [],
+   "source": [
+    "def convert_hex(xifra):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció transforma un nombre hexadecimal a nombre binari?\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    xifra: string\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    decimal: int      \n",
+    "    \"\"\"\n",
+    "    decimal = 0\n",
+    "    num = 0\n",
+    "    for a in range(len(xifra)):\n",
+    "        match xifra[a]:\n",
+    "            case '0'|'1'|'2'|'3'|'4'|'5'|'6'|'7'|'8'|'9':\n",
+    "                num = int(xifra[a])\n",
+    "            case 'A':\n",
+    "                num = 10\n",
+    "            case 'B':\n",
+    "                num = 11\n",
+    "            case 'C':\n",
+    "                num = 12\n",
+    "            case 'D':\n",
+    "                num = 13\n",
+    "            case 'E':\n",
+    "                num = 14\n",
+    "            case 'F':\n",
+    "                num = 15\n",
+    "        decimal += num*(16**(len(xifra)-a-1))\n",
+    "            \n",
+    "    return decimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "id": "ThQHSyk9UTap"
+   },
+   "outputs": [],
+   "source": [
+    "assert convert_hex('3A') == 58\n",
+    "assert convert_hex('B6') == 182\n",
+    "assert convert_hex('123') == 291"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "id": "iGbTDcZGUTap"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escriu una funció que compti quants dígits té un nombre natural escrit en base 10 i representat per una variable int."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "29NzoKVdUTap"
+   },
+   "outputs": [],
+   "source": [
+    "def digits(xifra):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció retorna el nombre de digits d'un natural.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    xifra: int\n",
+    "        Un nombre natural.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    numDigits: int\n",
+    "        Quanitat de digits que té xifra\n",
+    "    \"\"\"\n",
+    "    num = xifra\n",
+    "    numDigits = 0\n",
+    "    while xifra > 1:\n",
+    "        xifra = xifra/10\n",
+    "        numDigits += 1\n",
+    "    return numDigits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "kLbB2F4DUTaq"
+   },
+   "outputs": [],
+   "source": [
+    "assert digits(123456)== 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escriu una funció que donat un número N retorni tots els nombres binaris entre 1 i N dins d'una llista, ambdós inclosos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "6HyrADxIUTaq"
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def binari(N):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció crea tot els nombres binaris entre 1 i N donat N.\n",
+    "    Podeu utilitzar funcions específiques de Python. \n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    N: int\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    llista: list\n",
+    "    \"\"\"\n",
+    "    llista = []\n",
+    "    for i in range(1,N+1):\n",
+    "        llista.append(bin(i))\n",
+    "\n",
+    "    return llista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "movLNS0HUTaq"
+   },
+   "outputs": [],
+   "source": [
+    "assert binari(10) == ['0b1', '0b10', '0b11', '0b100', '0b101', '0b110', '0b111', '0b1000', '0b1001', '0b1010']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "id": "5DBX0gWiUTar"
+   },
+   "outputs": [],
+   "source": [
+    "def binari_elegant(N):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció crea tot els nombres binaris entre 1 i N donat N.\n",
+    "    Podeu utilitzar funcions específiques de Python. \n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    N: int\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    llista: list\n",
+    "    \"\"\"\n",
+    "    llista = []\n",
+    "    llista1 = []\n",
+    "    for i in range(1,N+1):\n",
+    "        llista1.append(bin(i))\n",
+    "    for i in llista1:\n",
+    "        i = str(i)\n",
+    "        i = i[2:]\n",
+    "        if len(i)<2:\n",
+    "            i = \"0\"+i\n",
+    "        if len(i)<3:\n",
+    "            i = \"0\"+i\n",
+    "        if len(i)<4:\n",
+    "            i = \"0\"+i\n",
+    "        llista.append(i)\n",
+    "    return llista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "id": "DbXbV10bUTar"
+   },
+   "outputs": [],
+   "source": [
+    "assert binari_elegant(10) == ['0001', '0010', '0011', '0100', '0101', '0110', '0111', '1000', '1001', '1010']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escriu una funció que compti la suma dels dígits d'un nombre elevat a una potència."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "id": "AaNK-BSWUTar"
+   },
+   "outputs": [],
+   "source": [
+    "def suma_digits(num, potencia):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció calcula la suma dels digits d'un número elevat a una potència.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    num: int\n",
+    "        Base\n",
+    "    potencia: int\n",
+    "        Exponent\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    suma: int\n",
+    "        Suma dels digits\n",
+    "    \"\"\"\n",
+    "    numero = num**potencia\n",
+    "    numero = str(numero)\n",
+    "    suma = 0\n",
+    "    for i in numero:\n",
+    "        suma += int(i)\n",
+    "    return suma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "jpUckxZvUTas"
+   },
+   "outputs": [],
+   "source": [
+    "def suma_digits(num, potencia):\n",
+    "    \"\"\"\n",
+    "    Aquesta funció calcula la suma dels digits d'un número elevat a una potència.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    num: int\n",
+    "        Base\n",
+    "    potencia: int\n",
+    "        Exponent\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    suma: int\n",
+    "        Suma dels digits\n",
+    "    \"\"\"\n",
+    "    return suma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "id": "7kw13I7DUTas"
+   },
+   "outputs": [],
+   "source": [
+    "assert suma_digits(2,100) == 115"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01\n",
+      "010\n",
+      "011\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['001', '0010', '0011', '0100', '0101', '0110', '0111', '1000', '1001', '1010']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binari_elegant(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "3.3.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
