--- a/Pràctiques/5.6.ipynb
+++ b/Pràctiques/5.6.ipynb
@@ -27,13 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "lPkE7tsGie16"
    },
    "outputs": [],
    "source": [
     "def negatius(llista):\n",
+    "    i = 0 \n",
+    "    j = len(llista)-1\n",
+    "    while(i < j):\n",
+    "        while llista[i] < 0:\n",
+    "            i+=1\n",
+    "        while llista[j] > 0:\n",
+    "            j-=1\n",
+    "        if llista[j] < 0 and llista[i] > 0:\n",
+    "            llista[i], llista[j] = llista[j],llista[i]\n",
+    "            i += 1\n",
+    "            j -=1\n",
     "    \"\"\"\n",
     "    Aquesta funció retorna la llista amb els nombres negatius al davant\n",
     "    \n",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "mNhUoBmAie16"
    },
@@ -63,10 +74,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "uf4_uUDbie16"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-3, -2, -4, 3, 1, 5, 6]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -6, -3, 4, 3, 5, 2]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -92,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
