--- a/Pràctiques/5.8.ipynb
+++ b/Pràctiques/5.8.ipynb
@@ -27,13 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "QUsXYGZ5g30U"
    },
    "outputs": [],
    "source": [
     "def rotacions(llista):\n",
+    "    i = 0\n",
+    "    j = len(llista)-1\n",
+    "    numRotacions = 0\n",
+    "    while llista[i]>llista[j]:\n",
+    "        numRotacions += 1\n",
+    "        i += 1\n",
     "    \"\"\"\n",
     "    Aquesta funció troba quantes rotacions s'han fet a la llista.\n",
     "    \n",
@@ -50,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "mjUyS4L0g30U"
    },
@@ -60,6 +66,38 @@
     "assert rotacions([3, 5, 10, 12, 1, 2]) == 4\n",
     "assert rotacions([20, 2, 3, 7, 15, 18]) == 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -83,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
